GBS-4400 JBoss/WildFly Upgrade 7. update jsp files